changed the take picture page

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         switchToShopper: function () {
             goToPage("_history", true);
 //            alert();
-//            loader.isDriver = false;
+              loader.isDriver = false;
 //            $.ajax({
 //                type: "POST",
 //                contentType: "application/json",
