--- a/_shopping.html
+++ b/_shopping.html
@@ -18,12 +18,14 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <div class="row" id="footerInfo">
-                <div class="col-xs-4" id="shopping_numItems"></div>
-                <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
-                    Continue
-                </a>
+
+            <div class="col-xs-4" id="shopping_numItems"></div>
+            <div class="col-xs-4">
+            <a id="shopping_submit_list" type="button" class="waves-teal btn waves-effects">
+                Continue
+            </a>
             </div>
+
         </div>
     </div>
 </div>
