Added Profile loading on RateUser/Driver, Shopping Status, Confirm Ticket, Purchased and Confirm Complete

--- a/_rateUser.html
+++ b/_rateUser.html
@@ -5,8 +5,7 @@
             <!--<h2>Account Information</h2>-->
             <div id="rateUser-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
                 transform: translate(-50%, -50%)">
-                <img style="margin: 8%" class="img-circle" id="rateUser-img"
-                     src="placeholder/person5.png">
+                <img style="margin: 8%" class="img-circle" id="rateUser-img" src="placeholder/person4.png">
             </div>
         </div>
 
