--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -5,7 +5,10 @@
 
             <div class="row">
                 <div class="col-xs-12">
-                    <div id="shopper_icon" class="col-xs-4"></div>
+                    <div id="shopper_icon" class="col-xs-4">
+                        <img style="margin: 8%" class="img-circle" id="conCom-img"
+                             src="placeholder/person4.png">
+                    </div>
                     <div id="shopper_name" class="col-xs-8">
                         <h4 id="shopperName"></h4>
                     </div>
