progress with back buttons

--- a/_deliveryLocation.html
+++ b/_deliveryLocation.html
@@ -11,8 +11,8 @@
                     async defer></script>
         </div>
         <div class="col-xs-12">
-            <a id="delivery-location-back" type="button" class="btn waves-effects orange"><- Back</a>
-            <a id="delivery-location-submit" type="button" class="btn waves-effects orange">Select -></a>
+            <a id="delivery-location-back" type="button" class="btn waves-effects orange"><< Back</a>
+            <a id="delivery-location-submit" type="button" class="btn waves-effects orange">Select >></a>
         </div>
     </div>
 </div>
