--- a/_deliveryTime.html
+++ b/_deliveryTime.html
@@ -309,8 +309,8 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <a id="delivery-time-back" type="button" class="btn waves-effects orange"><- Back</a>
-            <a id="delivery-time-submit" type="button" class="btn waves-effects orange">Select -></a>
+            <a id="delivery-time-back" type="button" class="btn waves-effects orange"><< Back</a>
+            <a id="delivery-time-submit" type="button" class="btn waves-effects orange">Select >></a>
         </div>
     </div>
 </div>
