--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -11,19 +11,18 @@
         </div>
 
         <div class="col-xs-12">
-                <div class="text-left" id="shoppingstatus_note"></div>
-                <div class="text-left" id="shoppingstatus_location"></div>
+                <div id="shoppingstatus_note"></div>
+                <div id="shoppingstatus_location"></div>
                 <div id="shoppingStatusMap" class="map"></div>
         </div>
 
         <div id="shoppingStatusCalendarPart" class="col-xs-12">
-            <div class="text-left" id="shoppingStatusCalendarHeader">Delivery time:</div>
+            <div id="shoppingStatusCalendarHeader">Delivery time:</div>
             <div id="shoppingStatusCalendar"></div>
         </div>
 
         <div class="col-xs-12">
             <div class="row" id="_shoppingStatus_footerInfo">
-
                 <a id="shoppingStatus_list_btn" type="button" class="btn waves-effect orange">
                     Close
                 </a>
