--- a/_deliveredTickets.html
+++ b/_deliveredTickets.html
@@ -42,7 +42,7 @@
         <div class="col-xs-12">
             <div class="row" id="deliveredTickets_footerInfo">
                 <div class="col-xs-12">
-                    <a id="deliveredTickets-back" type="button" class="btn waves-effects orange"><- Back</a>
+                    <a id="deliveredTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
                 </div>
             </div>
         </div>
