--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -42,8 +42,8 @@
         <div class="col-xs-12">
             <div class="row" id="purchasedTickets_footerInfo">
                 <div class="col-xs-12">
-                    <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><- Back</a>
-                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket -></a>
+                    <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
+                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket >></a>
                 </div>
             </div>
         </div>
