Changed chat image to canvas

--- a/_checkout.html
+++ b/_checkout.html
@@ -10,14 +10,11 @@
                     <div id="checkout_notes">
                         <form action="submit" style="text-align:left">
                             <div class="col-xs-4 col-xs-offset-4">
-                                </p>
                                 <input name="special_notes" type="radio" id="checkout_option1" value="cheapest"/>
                                 <label for="checkout_option1">Cheapest</label>
-                                </p>
 
                                 <input name="special_notes" type="radio" id="checkout_option2" value="expensive"/>
                                 <label for="checkout_option2">Most Expensive</label>
-                                </p>
 
                                 <input name="special_notes" type="radio" id="checkout_option3" value="none"/>
                                 <label for="checkout_option3">None</label>
@@ -25,7 +22,7 @@
                         </form>
                     </div>
                 </div>
-                <div class ="row">
+                <div class="row">
                     <div class="alert alert-danger fade in" id="checkout_warning">
                         <strong>Danger!</strong> You must select an option!
                     </div>
@@ -36,9 +33,8 @@
 
     <div class="row" style="text-align: center">
         <div class="col-xs-12">
-            <a id="checkout-back" type="button" style="width:150px;" class="btn waves-effects orange"><< Back</a>
-            <a id="checkout_close" type="button" style="width:150px;" class="btn waves-effects orange">Close</a>
-            <a id="checkout_submitcheckout" type="button" style="width:150px;" class="btn waves-effects orange">Continue >></a>
+            <a id="checkout-back" type="button" class="btn waves-effects orange"><< Back</a>
+            <a id="checkout_submitcheckout" type="button"  class="btn waves-effects orange">Pay and Submit >></a>
         </div>
     </div>
 
