--- a/_rateUser.html
+++ b/_rateUser.html
@@ -1,24 +1,23 @@
-<div id="rateUser" class="container box" style="text-align: center">
-    <div class="row" style="height: 100%;">
+<div id="rateUser" class="container box text-center">
+    <div class="row">
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 300px;">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon">
             <!--<h2>Account Information</h2>-->
-            <div id="rateUser-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
-                transform: translate(-50%, -50%)">
-                <img style="margin: 8%" class="img-circle" id="rateUser-img" src="placeholder/person4.png">
+            <div id="rateUser-image-content">
+                <img class="img-circle" id="rateUser-img" src="placeholder/person4.png">
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id="rateUser-content" style="position: relative; height: 200px; margin-top: 8%">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id="rateUser-content" >
             <h2>Rate the shopper!</h2>
             <h3 id="user-name_rateUser">Shopper name: Gary Gillespie</h3>
 
             <div class="rating">
-                <span id="user_rating-1" class="glyphicon glyphicon-heart" style="font-size: 35px"></span>
-                <span id="user_rating-2" class="glyphicon glyphicon-heart" style="font-size: 35px"></span>
-                <span id="user_rating-3" class="glyphicon glyphicon-heart" style="font-size: 35px"></span>
-                <span id="user_rating-4" class="glyphicon glyphicon-heart" style="font-size: 35px"></span>
-                <span id="user_rating-5" class="glyphicon glyphicon-heart" style="font-size: 35px"></span>
+                <span id="user_rating-1" class="glyphicon glyphicon-heart"></span>
+                <span id="user_rating-2" class="glyphicon glyphicon-heart" ></span>
+                <span id="user_rating-3" class="glyphicon glyphicon-heart" ></span>
+                <span id="user_rating-4" class="glyphicon glyphicon-heart" ></span>
+                <span id="user_rating-5" class="glyphicon glyphicon-heart" ></span>
             </div>
         </div>
 
