--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -44,6 +44,9 @@
                 <div class="col-xs-12">
                     <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
                     <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket >></a>
+                    <a id="purchasedTickets_messenger" type="button" class="waves-teal btn waves-effects">
+                        Messenger
+                    </a>
                 </div>
             </div>
         </div>
