--- a/_shopping.html
+++ b/_shopping.html
@@ -20,10 +20,13 @@
         <div class="col-xs-12">
 
             <div class="col-xs-4" id="shopping_numItems"></div>
-            <div class="col-xs-4">
-            <a id="shopping_submit_list" type="button" class="waves-teal btn waves-effects">
-                Continue
-            </a>
+
+            <div class="col-xs-12">
+                <a id="shopping-back" type="button" class="btn waves-effects orange"><< Back</a>
+
+                <a id="shopping_submit_list" type="button" class="waves-teal btn waves-effects">
+                    Continue >>
+                </a>
             </div>
 
         </div>
