fix chat in driverlist and purchased ticket

--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -43,6 +43,7 @@
             <div class="row" id="purchasedTickets_footerInfo">
                 <div class="col-xs-12">
                     <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
+                    <a id="purchasedTickets-messenger" type="button" class="btn waves-effects orange">Messenger</a>
                     <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket >></a>
                 </div>
             </div>
