--- a/_deliveredTickets.html
+++ b/_deliveredTickets.html
@@ -26,15 +26,15 @@
 
     <div class="row">
         <div id="deliveredTicketsCalendarPart" class="col-xs-12">
-            <div class="text-left" id="deliveredTicketsCalendarHeader">Delivery time:</div>
+            <div id="deliveredTicketsCalendarHeader">Delivery time:</div>
             <div id="deliveredTicketsCalendar"></div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-12">
-            <div class="text-left" id="deliveredTickets_location"></div>
-            <div id="deliveredTicketsMap" class="map"></div>
+            <div id="deliveredTickets_location"></div>
+            <div id="deliveredTicketsMap" class="map" style="margin: auto"></div>
         </div>
     </div>
 
