--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -26,15 +26,15 @@
 
     <div class="row">
         <div id="purchasedTicketsCalendarPart" class="col-xs-12">
-            <div class="text-left" id="purchasedTicketsCalendarHeader">Delivery time:</div>
+            <div id="purchasedTicketsCalendarHeader">Delivery time:</div>
             <div id="purchasedTicketsCalendar"></div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-12">
-            <div class="text-left" id="purchasedTickets_location"></div>
-            <div id="purchasedTicketsMap" class="map"></div>
+            <div id="purchasedTickets_location"></div>
+            <div id="purchasedTicketsMap" class="map" style="margin: auto"></div>
         </div>
     </div>
 
