--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -10,15 +10,15 @@
             <div class="text-left"  id="_shoppingStatus_numItems"></div>
         </div>
 
-        <div class="col-xs-12">
-                <div id="shoppingstatus_note"></div>
-                <div id="shoppingstatus_location"></div>
-                <div id="shoppingStatusMap" class="map"></div>
-        </div>
-
         <div id="shoppingStatusCalendarPart" class="col-xs-12">
             <div id="shoppingStatusCalendarHeader">Delivery time:</div>
             <div id="shoppingStatusCalendar"></div>
+        </div>
+
+        <div class="col-xs-12">
+            <div id="shoppingstatus_note"></div>
+            <div id="shoppingstatus_location"></div>
+            <div id="shoppingStatusMap" class="map" style="margin: auto"></div>
         </div>
 
         <div class="col-xs-12">
