--- a/payment.html
+++ b/payment.html
@@ -171,7 +171,7 @@
     loader.payment = {
         triggerPayment: function () {
             $('.complete-payment').val('https://fetchgrocery.com/complete-payment?user=' + loader.userId);
-            $('.cancel-payment').val('http://localhost:3000/cancel-payment?user=' + loader.userId);
+            $('.cancel-payment').val('http://fetchgrocery.com/cancel-payment?user=' + loader.userId);
 
             var price = 5;
 
