--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                     canvas.height = img.height / factor;
                     var context = canvas.getContext("2d");
                     context.drawImage(img, 0, 0);
+                    alert();
                     $.ajax({
                         type: "POST",
                         contentType: "application/json",
@@ -218,6 +219,7 @@
                             name: name
                         }),
                         success: function () {
+                            alert();
                             var chat = $(input.parentNode.parentNode.parentNode).find('.chatForm');
                             chat.find("input").val("<img class='materialboxed' src='/images/chat/" + name + "'/>");
                             chat.submit();
@@ -794,25 +796,25 @@
         $(document).on('click mousemove focus keypress', loader.setActive);
 
         pageInit();
-        for (var j = 0; j < allPages.length; j++) {
-            $('#page-content').append('<div id="section-' + j + '"></div>');
-            for (var i = 0; i < allPages[j].length; i++) {
-                var whichid = allPages[j][i];
-                loadPage(whichid, j, i);
-                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
-            }
-        }
-
-//        $.ajax({
-//            type: "POST",
-//            url: "/loadPage",
-//            data: {name: "allPages"},
-//            async: false,
-//            success: function (data) {
-//                $('#page-content').append(data);
+//        for (var j = 0; j < allPages.length; j++) {
+//            $('#page-content').append('<div id="section-' + j + '"></div>');
+//            for (var i = 0; i < allPages[j].length; i++) {
+//                var whichid = allPages[j][i];
+//                loadPage(whichid, j, i);
+//                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
+//                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
 //            }
-//        });
+//        }
+
+        $.ajax({
+            type: "POST",
+            url: "/loadPage",
+            data: {name: "allPages"},
+            async: false,
+            success: function (data) {
+                $('#page-content').append(data);
+            }
+        });
 
         $("#index_login_top").show();
         $("#open-menu-drawer").show();
