--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -16,7 +16,7 @@
             <div class="text-left" id="cancelTicket_note"></div>
             <div class="text-left" id="cancelTicket_location"></div>
             <div class="text-left" id="cancelTicketMapHeader">Delivery location:</div>
-            <div id="cancelTicketMap" class="map"></div>
+            <div id="cancelTicketMap" class="map" style="margin: auto"></div>
         </div>
 
         <div id="cancelTicketCalendarPart" class="col-xs-12">
@@ -32,7 +32,6 @@
                 <a id="cancelTicket_cancel_btn" type="button" class="btn waves-effect">
                     Cancel ticket
                 </a>
-
             </div>
         </div>
     </div>
