--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="text-left" id="confirmTicket_location"></div>
-                    <div id="confirmTicket_Map" class="map"></div>
+                    <div id="confirmTicket_Map" class="map" style="margin: auto"></div>
                 </div>
             </div>
 
