--- a/_rateUser.html
+++ b/_rateUser.html
@@ -1,5 +1,5 @@
 <div id="rateUser" class="container box text-center">
-    <div class="row">
+    <div class="row ratingSize">
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon">
             <!--<h2>Account Information</h2>-->
