--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -26,10 +26,10 @@
     <!--<div class="row">-->
     <!--<div class="col-xs-12">-->
     <div class="row" id="_viewTicket_footerInfo">
-        <div class="col-xs-12" style="display: inline-block">
-            <a id="viewTicket-back" type="button" class="btn waves-effects orange"><< Back</a>
+        <div class="col-xs-12">
+            <a id="viewTicket-back" type="button" class="btn waves-effects orange" style="float: none"><< Back</a>
             <a id="_viewTicket_submit_list" type="button"
-               class="col-xs-4 text-center btn waves-effect waves-teal">
+               class="col-xs-4 text-center btn waves-effect waves-teal" style="float: none">
                 Accept Ticket
             </a>
         </div>
