--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -11,7 +11,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id="rateDriver-content" >
             <h2>Rate the driver!</h2>
-            <h3 id="driver-name_rateDriver">Driver name: Gary Gillespie</h3>
+            <h3 id="driver-name_rateDriver"></h3>
 
             <div class="rating">
                 <span id="driver_rating-1" class="glyphicon glyphicon-heart"></span>
