--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     canvas.width = img.width / factor;
                     canvas.height = img.height / factor;
                     var context = canvas.getContext("2d");
-                    context.drawImage(img, 0, 0);
+                    context.drawImage(img, 0, 0, canvas.width, canvas.height);
                     alert();
                     $.ajax({
                         type: "POST",
