--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,5 +1,5 @@
-<div id="accSetting" class="container box" style="text-align: center">
-    <div class="row" style="height: 100%;">
+<div id="accSetting" class="container box text-center">
+    <div class="row">
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
             <!--<h2>Account Information</h2>-->
