--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,7 +1,7 @@
 <div id="accSetting" class="container box text-center">
     <div class="row">
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
             <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
                 transform: translate(-50%, -50%)">
