--- a/_accSetting.html
+++ b/_accSetting.html
@@ -3,9 +3,8 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
-            <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
-                transform: translate(-50%, -50%)">
-                <img style="margin: 8%" class="img-circle" id="accSettingAbove-img"
+            <div id="user-image-content" >
+                <img class="img-circle" id="accSettingAbove-img"
                      src="placeholder/person4.png">
                 <div>
                 <a onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
