--- a/_accSetting.html
+++ b/_accSetting.html
@@ -3,15 +3,20 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
-            <div id="user-image-content" >
-                <img class="img-circle" id="accSettingAbove-img"
-                     src="placeholder/person4.png">
+            <div class = "row test">
+                <div class = "col-xs-12">
+                    <div id="user-image-content" >
+                        <img class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
                 <div>
                 <a onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
                 </div>
-
             </div>
         </div>
+
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
             <!--<h2>Account Information</h2>-->
