--- a/_accSetting.html
+++ b/_accSetting.html
@@ -18,7 +18,7 @@
         </div>
 
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 accProfile">
             <!--<h2>Account Information</h2>-->
 
             <div id="accProfile">
