--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -11,9 +11,9 @@
                 <label for="enter_price_receipt">Enter the price:</label>
             </div>
 
-            <a class="btn waves-effect orange">
+            <label class="btn waves-effect orange">
                 Upload Receipt Image<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
-            </a>
+            </label>
 
             <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
             <a class="btn waves-effects orange" id="cancelRecButton1">Cancel</a>
